--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,47 @@
-body {
-  background-color: LightGray;
+html {
+  box-sizing: border-box;
 }
-div {
-  border: 1px solid Chocolate;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 /* Navigation Section */
 .top-navigation {
   background-color: #fff;
+  position: fixed;
+  width: 100%;
+  border-bottom: 1px solid #DDD;
+  z-index: 9999;
 }
 .top-navigation > .content {
   width: 970px;
   height: 70px;
   margin: 0 auto;
+  padding: 0px 15px;
+}
+.top-navigation .logo {
+  height: 4.375rem;
+}
+.top-navigation .links li {
+  display: inline-block;
+  margin-left: 25px;
+}
+.top-navigation .links {
+float: right;
+  font-family: "Roboto", sans-serif;
+  color: #838994
+  font-size: 16px;
+  margin-top: 25px;
+  letter-spacing: 0.03em;
+  -webkit-font-smoothing: antialiased;
+}
+.top-navigation .links li:hover {
+  cursor: pointer;
+  color: #333333;
+}
+.introduction {
+  background-image: url('../images/first-background.jpg');
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 45.938rem;
 }
