--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,6 @@ html {
 .top-navigation > .content {
   width: 970px;
   height: 70px;
-  margin: 0 auto;
-  padding: 0px 15px;
 }
 .top-navigation .logo {
   height: 4.375rem;
@@ -44,4 +42,61 @@ float: right;
   background-repeat: no-repeat;
   background-size: cover;
   height: 45.938rem;
+  overflow: auto;
+}
+.introduction h1 {
+  margin-top: 17.5rem;
+  font-size: 3.125rem;
+}
+.introduction h1, .introduction h3 {
+  color: white;
+  text-align: center;
+  font-weight: 300;
+}
+.introduction h3 {
+  margin-top: 1.25rem;
+  font-size: 1.563rem;
+}
+.content {
+  margin: 0 auto;
+  padding: 0px 15px;
+  width: 970px;
+}
+.introduction .button {
+  color: white;
+  text-align: center;
+  margin-top: 1.563rem;
+}
+body {
+  display: block;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialised;
+  line-height: 1;
+}
+h1, h3 {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
+}
+button:hover {
+  background-color: #d9400e;
+  border-color: #d9400e;
+  cursor: pointer;
+}
+button {
+  text-shadow: none;
+  border-style: none;
+  border-radius: 4px;
+  padding: 1rem 1.5rem;
+  margin: 0 auto;;
+  display: block;
+  width: 9.688rem;
+  background-color: #f15a29;
+  border-color: #f15a29;
+  color: white;
+  font-size: 1.125rem;
 }
